--- a/app.json
+++ b/app.json
@@ -19,26 +19,26 @@
       {
         "pagePath": "pages/home/home",
         "text": "广场",
-        "selectedIconPath": "",
-        "iconPath": ""
+        "selectedIconPath": "images/tab-bar/home_selected.png",
+        "iconPath": "images/tab-bar/home.png"
       },
       {
         "pagePath": "pages/publish/publish",
         "text": "发布",
-        "selectedIconPath": "",
-        "iconPath": ""
+        "selectedIconPath": "images/tab-bar/publish_selected.png",
+        "iconPath": "images/tab-bar/publish.png"
       },
       {
         "pagePath": "pages/message/message",
         "text": "消息",
-        "selectedIconPath": "",
-        "iconPath": ""
+        "selectedIconPath": "images/tab-bar/message_selected.png",
+        "iconPath": "images/tab-bar/message.png"
       },
       {
         "pagePath": "pages/my/my",
         "text": "我的",
-        "selectedIconPath": "",
-        "iconPath": ""
+        "selectedIconPath": "images/tab-bar/mine_selected.png",
+        "iconPath": "images/tab-bar/mine.png"
       }
     ]
   },
