--- a/app.json
+++ b/app.json
@@ -44,5 +44,8 @@
     ]
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "usingComponents": {
+    "i-icon":"./components/icon/icon"
+  }
 }
